--- a/homepage.css
+++ b/homepage.css
@@ -214,17 +214,15 @@ body, html {
 }
 
 .featured-book {
-  width: 35%;
+  width: 40%;
+  height: 50%;
   display: flex;
-  flex-direction: column;
-  background-color: #ffffff;
   padding: 20px;
-  border-radius: 12px;
   box-shadow: 0 4px 8px rgba(0,0,0,0.05);
 }
 
 .featured-book img {
-  width: 20%;
+  width: 40%;
   border-radius: 8px;
 }
 
@@ -288,6 +286,7 @@ body, html {
   padding: 15px;
   background-color: #fff;
   margin-top: 15px;
+
 }
 
 
